# lab1-struct-json

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  check_struct.cpp  input_struct.cpp  json_for_string.cpp  json_obj.cpp  json_obj.h  main.cpp  main1.cpp  test.cpp  wrong_type_exception.cpp  wrong_type_exception.h
docs/: check__struct_8cpp.html  doxygen_crawl.html  files.html  globals_defs.html  globals_eval.html  globals_func.html  input__struct_8cpp.html  json__for__string_8cpp.html  json__for__string_8cpp_source.html  json__obj_8cpp_source.html  json__obj_8h_source.html  main_8cpp.html  menudata.js  test_8cpp_source.html
docs/html/: annotated.html  check__struct_8cpp_source.html  classes.html  doxygen_crawl.html  files.html  globals.html  globals_enum.html  input__struct_8cpp_source.html  json__for__string_8cpp.html  json__obj_8cpp.html  json__obj_8cpp_source.html  json__obj_8h.html  json__obj_8h_source.html  main_8cpp.html  main_8cpp_source.html  menudata.js  test_8cpp.html  test_8cpp_source.html
docs/search/: all_0.js  all_2.js  all_3.js  all_a.js  all_c.js  defines_0.js  (+7 more)
html/: check__struct_8cpp.html  class_wrong_type_exception-members.html  class_wrong_type_exception.html  classes.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  hierarchy.html  input__struct_8cpp.html  json__for__string_8cpp_source.html  json__obj_8h.html  json__obj_8h_source.html  md__r_e_a_d_m_e.html  pages.html  struct_wrong_type_exception.html  test_8cpp.html  test_8cpp_source.html  wrong__type__exception_8h_source.html
(+47 files in other folders)
